--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ a:hover,
     background-size: cover;
     text-align: center;
     color: #ffffff;
-    padding-top: 20vh;
+    padding-top: 37%;
 }
 
 .main-info {
