--- a/css/style.css
+++ b/css/style.css
@@ -263,13 +263,20 @@ h1 {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    padding: 15px 0 15px 35px;
+    padding: 15px 185px 15px 35px;
     box-sizing: border-box;
     border-radius: 27px;
     border: 1px solid rgba(255, 255, 255, 0.5);
     background-color: rgba(255, 255, 255, 0.3);
     position: relative;
     outline-color: #ccbfb2;
+}
+
+input.form_input {
+    color: #ffffff;
+    font-family: "Roboto Slab", sans-serif;
+    font-size: 18px;
+    font-weight: 400;
 }
 
 /* Placeholder */
